доб. адаgтива, добавление карт

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Bug_antonova</title>
   <!-- Подключаем css -->
   <link rel="stylesheet" href="style.css">
-  <!-- Подключаем адаптив 
-  <link rel="stylesheet" href="adaptive.css">-->
+  <!-- Подключаем адаптив--> 
+  <link rel="stylesheet" href="adaptive.css">
 </head>
   <!-- Отобр. тело веб-страницы -->
 <body class="body">
@@ -32,7 +32,7 @@
     </section>
     <div class="card-game none"></div>
   </div>
-    <!-- Подключаем js -->
+  <!-- Подключаем js -->
   <script src="script.js"></script>
 </body>
 </html>
